# truly-ai

./: .gitignore  COMPREHENSIVE_DOCUMENTATION.md  DEPLOYMENT_TESTING_GUIDE.md  DESCRIPTION.md  LICENSE.md  README.md  YOUTUBE_SETUP.md  description.txt  install-yt-dlp.bat  package-lock.json  pyproject.toml  vercel.json
Python_backend/: .env.example  AWS_BEDROCK_SOLUTION.md  AWS_SETUP_README.md  README.md  aws_config.py  bedrock-da-permissions.json  bedrock-da-trust-policy.json  debug_whisper.py  f_test_audio.py  f_test_audio_simple.py  f_test_audio_working.py  f_test_image.py  f_test_video.py  fix_whisper_ffmpeg.py  librosa_audio.py  main.py  nova_image_test.py  real_working_analyzer.py  reddit.py  requirements.txt  requirements1.txt  requirements2.txt  requirements_audio.txt  requirements_http_support.txt  requirements_new.txt  responses.txt  run.py  setup_aws_roles.py  simple_bedrock_test.py  simple_test.py  test_all_features.py  test_aws_credentials.py  test_aws_setup.py  test_fallback.py  test_fastapi.py  test_nova_sonic.py  testbedrock.py  truly-ai-app-permissions.json  truly-ai-app-trust-policy.json  twitter.py  (+2 more)
Python_backend/api/: index.py
Python_backend/app/: __init__.py  config.py  main.py
frontend/: .env.example  .vercelignore  API-TEST-README.md  FILE-STORAGE-INFO.md  README.md  SETUP-GUIDE.md  logs.txt  neob.md  next.config.ts  package-lock.json  package.json  script.ts  tailwind.config.ts  test-api-node.js  test-api-simple.sh  test-api.bat  test-api.js  test-handle-only.cjs  test-initial-api.cjs  test-initial-api.js  test-initial.bat  test-quick.bat
(+84 files in other folders)
