[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truly-ai"
version = "1.0.0"
description = "TrulyAI - Multimodal Social Media Analysis Platform"
requires-python = ">=3.11.0,<3.12"
dependencies = [
    # Core dependencies will be read from requirements.txt
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["app"]
package-dir = {"" = "Python_backend"}

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
